--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Avram Stern</title>
 
     <!-- Arvo font and font-awesome include -->
     <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
@@ -41,12 +41,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/top-logo.png" alt="One Million Lines"></a>
+          <a class="navbar-brand" href="#"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#who">WHO WE ARE</a></li>
-            <li><a href="#get-involved">GET INVOLVED</a></li>
+            <li><a href="#get-involved">Avram Stern</a></li>
+            <li><a href="#get-involved">stern9@gmail.com</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,25 +55,20 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Our goal is to inspire <br>Tallahassee to write 1,000,000<br> lines of code_</h1>
-        <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_</p>
-        <p><a class="btn btn-danger btn-lg" role="button">Get Involved</a></p>
+        <h1>Avram Stern</h1>
+        <p>Este es solo <strong>un ejemplo</strong> de trabajos en los que he <strong>colaborado</strong>. La mayoria de estos sitios son de clientes internacionales.</p>
+        <p><a href="ejemplos.html" target="_blank" class="btn btn-danger btn-lg" role="button">Ejemplos</a></p>
         <img src="images/code.png" title="Code.org" alt="Code.org">
+        <p></p>
+        <p>"<strong>Champions are made from something they have deep inside them, a desire, a dream, a vision."</strong></p>
       </div>
     </div>
 
-    <div id="who">
-      <div class="container homepage">
-        <img src="images/academy_brand_med.png" title="MASSIVE Academy" alt="MASSIVE Academy">
-        <h2>Who We Are</h2>
-        <hr>
-        <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
-      </div>
-    </div>
+    
 
     <div id="get-involved">
       <div class="container homepage">
-        <h2>Get Involved</h2>
+        <h2>Dispuesto a ayudar</h2>
         <hr>
         <!-- Example row of columns -->
         <div class="row">
@@ -82,27 +77,21 @@
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-user fa-stack-1x fa-inverse"></i>
             </span>
-            <h3>Students</h3>
-            <p>Want to learn how to code? Want to help us get to 1,000,000 lines?  Click the button below and we'll let you know how to get involved.</p>
-            <p><a class="btn btn-default" href="grid.html" role="button">Start Learning &raquo;</a></p>
+            <h3>Profesional</h3>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
             </span>
-            <h3>Educators</h3>
-            <p>Want to bring this initiative to your school or institution?  Awesome! Click the button below and we'll make it happen.</p>
-            <p><a class="btn btn-default" href="http://www.google.com" target="_blank" role="button">Join The Iniative &raquo;</a></p>
+            <h3>Efectivo</h3>
          </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-money fa-stack-1x fa-inverse"></i>
             </span>
-            <h3>Sponsors</h3>
-            <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding.  Click to get involved.</p>
-            <p><a class="btn btn-default" href="#" role="button">Give Support &raquo;</a></p>
+            <h3>Economico</h3>
           </div>
         </div>
       </div> <!-- /container -->
@@ -110,7 +99,7 @@
 
     <footer>
       <div class="container">
-      <p><img src="images/one_million_bottom_brand.png"></p>
+      <p></p>
       </div>
     </footer>
     
