--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Avram Stern</h1>
-        <p>Este es solo <strong>un ejemplo</strong> de trabajos en los que he <strong>colaborado</strong>. La mayoria de estos sitios son de clientes internacionales.</p>
+        <p>Estos son algunos <strong>ejemplos</strong> de trabajos en los que he <strong>colaborado</strong>. La mayoria de estos sitios son de clientes internacionales.</p>
         <p><a href="ejemplos.html" target="_blank" class="btn btn-danger btn-lg" role="button">Ejemplos</a></p>
         <img src="images/code.png" title="Code.org" alt="Code.org">
-        <p></p>
-        <p>"<strong>Champions are made from something they have deep inside them, a desire, a dream, a vision."</strong></p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>"<strong>Champions</strong> are made from something they have deep inside them, a <strong>desire</strong>, a <strong>dream</strong>, a <strong>vision</strong>."</p>
       </div>
     </div>
 
