--- a/index.html
+++ b/index.html
@@ -31,87 +31,6 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"></a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#get-involved">Avram Stern</a></li>
-            <li><a href="#get-involved">stern9@gmail.com</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Avram Stern</h1>
-        <p>Estos son algunos <strong>ejemplos</strong> de trabajos en los que he <strong>colaborado</strong>. La mayoria de estos sitios son de clientes internacionales.</p>
-        <p><a href="ejemplos.html" target="_blank" class="btn btn-danger btn-lg" role="button">Ejemplos</a></p>
-        <img src="images/code.png" title="Code.org" alt="Code.org">
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>"<strong>Champions</strong> are made from something they have deep inside them, a <strong>desire</strong>, a <strong>dream</strong>, a <strong>vision</strong>."</p>
-      </div>
-    </div>
-
-    
-
-    <div id="get-involved">
-      <div class="container homepage">
-        <h2>Dispuesto a ayudar</h2>
-        <hr>
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Profesional</h3>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Efectivo</h3>
-         </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-money fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Economico</h3>
-          </div>
-        </div>
-      </div> <!-- /container -->
-    </div>
-
-    <footer>
-      <div class="container">
-      <p></p>
-      </div>
-    </footer>
-    
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <img src="images/underConstruction.jpg" alt="Under Construction">
   </body>
 </html>
