--- a/index.html
+++ b/index.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
-
-    <title>Avram Stern</title>
-
-    <!-- Arvo font and font-awesome include -->
-    <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>Avram Stern | Novice D</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Changa+One%7COpen+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-
   <body>
-    <img src="images/underConstruction.jpg" alt="Under Construction">
+    <header>
+      <a href="index.html" id="logo">
+        <h1>Avram Stern</h1>
+        <h2>Novice D</h2>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="selected">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="wrapper">
+      <section>
+        <ul id="gallery">
+          <li>
+            <a href="img/numbers-01.jpg">
+              <img src="img/numbers-01.jpg" alt="">
+              <p>Experimentation with color and texture.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-02.jpg">
+              <img src="img/numbers-02.jpg" alt="">
+              <p>Playing with blending modes in Photoshop.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-06.jpg">
+              <img src="img/numbers-06.jpg" alt="">
+              <p>Trying to create an 80's style of glows.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-09.jpg">
+              <img src="img/numbers-09.jpg" alt="">
+              <p>Drips created using Photoshop brushes.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/numbers-12.jpg" alt="">
+              <p>Creating shapes using repetition.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="http://twitter.com/avramstern"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/avramstern"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <p>&copy; 2014 Avram Stern.</p>
+      </footer>
+    </div>
   </body>
 </html>
