--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
       <a href="index.html" id="logo">
         <h1>Avram Stern</h1>
-        <h2>Novice D</h2>
+        <h2>Novice Developer</h2>
       </a>
       <nav>
         <ul>
@@ -26,14 +26,18 @@
     <div id="wrapper">
       <section>
         <img src="img/me.jpg" alt="Photograph of Avram Stern" class="profile-photo">
-        <h3>About</h3>
-        <p>Hi, I'm Avram Stern! This is my first draft to prepare a design portfolio where I will be sharing all of my favorite work. When I'm not fooling around trying to learn how to code, I enjoy exercising, playing video games, watching sports, spending time with my beautiful girlfriend drinking good coffee and much more!</p>
-        <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/avramstern">@avramstern.</a></p>
+        <h3>About Me</h3>
+        <p>Hi, I'm Avram Stern! This is my first draft to prepare a web development portfolio where I will be sharing all of my favorite work. I am currently studying Computer Engineering at the university and I was introduced to code in Java and C#, which I find amazing. But in my spare time I have been taking several courses online about web development. When I'm not fooling around trying to learn how to code, I might be working as an Online Marketing Analyst. I also enjoy exercising, playing video games, watching sports, spending time with my beautiful girlfriend and much more!</p>
+
+         <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/avramstern">@avramstern.</a></p>
+
+         <h4>About this website</h4>
+         <p>This website was built responsively using HTML, CSS and some Javascript/jQuery. Fonts are served through <a href="https://www.google.com/fonts">Google Fonts.</a> All photos on the website are of my personal projects. </p>
       </section>
       <footer>
         <a href="http://twitter.com/avramstern"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/avramstern"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2014 Avram Stern.</p>
+        <p>&copy; 2015 Avram Stern.</p>
       </footer>
     </div>
   </body>
