--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <header>
       <a href="index.html" id="logo">
         <h1>Avram Stern</h1>
-        <h2>Novice D</h2>
+        <h2>Novice Developer</h2>
       </a>
       <nav>
         <ul>
@@ -25,14 +25,14 @@
     </header>
     <div id="wrapper">
       <section id="primary">
-        <h3>General Information</h3>
-        <p>I am not currently looking for new design work, but I am available for speaking gigs and similar engagements. If you have any questions, please don't hesitate to contact me!</p>
-        <p>Please only use email contact for inqueries. Otherwise, Twitter is the best way to reach me.</p>
+        <h3>Get in Touch</h3>
+        <p>The fastest way to get a response from me is to send me an email. I will try my best to respond to your email as fast as I can. If you have any questions, please don't hesitate to contact me!</p>
+        <p>If email is not your thing, you can also try to reach me through social media.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:8816-5476">8816-5476</a></li>
+          <li class="phone"><a href="tel:+506 8816-5476">+506 8816-5476</a></li>
           <li class="mail"><a href="mailto:stern9@gmail.com">stern9@gmail.com</a></li>
           <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=avramstern">@avramstern</a></li>
         </ul>
@@ -40,7 +40,7 @@
       <footer>
         <a href="http://twitter.com/avramstern"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/avramstern"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2014 Avram Stern.</p>
+        <p>&copy; 2015 Avram Stern.</p>
       </footer>
     </div>
   </body>
