--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Avram Stern | Novice D</title>
+    <title>Avram Stern | Novice Dev</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One%7COpen+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -13,7 +13,7 @@
     <header>
       <a href="index.html" id="logo">
         <h1>Avram Stern</h1>
-        <h2>Novice D</h2>
+        <h2>Novice Developer</h2>
       </a>
       <nav>
         <ul>
@@ -28,32 +28,92 @@
         <ul id="gallery">
           <li>
             <a href="img/numbers-01.jpg">
-              <img src="img/numbers-01.jpg" alt="">
-              <p>Experimentation with color and texture.</p>
+              <img src="img/spoilerRevealer.jpg" alt="">
+              <p>Reveal elements with users interaction of 2 buttons using jQuery.</p>
             </a>
           </li>
           <li>
             <a href="img/numbers-02.jpg">
-              <img src="img/numbers-02.jpg" alt="">
-              <p>Playing with blending modes in Photoshop.</p>
+              <img src="img/avramBBC.jpg" alt="">
+              <p>CSS project, trying to recreate the BBC website.</p>
             </a>
           </li>
           <li>
             <a href="img/numbers-06.jpg">
-              <img src="img/numbers-06.jpg" alt="">
-              <p>Trying to create an 80's style of glows.</p>
+              <img src="img/lakeTahoe.jpg" alt="">
+              <p>A plain landing page using several HTML/CSS elements.</p>
             </a>
           </li>
           <li>
             <a href="img/numbers-09.jpg">
-              <img src="img/numbers-09.jpg" alt="">
-              <p>Drips created using Photoshop brushes.</p>
+              <img src="img/simpleLightbox.jpg" alt="">
+              <p>Lightbox overlay for an image gallery using jQuery.</p>
             </a>
           </li>
           <li>
             <a href="img/numbers-12.jpg">
-              <img src="img/numbers-12.jpg" alt="">
-              <p>Creating shapes using repetition.</p>
+              <img src="img/interactivePasswordForm.jpg" alt="">
+              <p>Interactive password confirmation form. Keyboard events in jQuery to compare passwords in 2 fields (No server side code).</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/drawingApp.jpg" alt="">
+              <p>A simple drawing application using mouse events with jQuery and the HTML5 canvas element.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/widgetLandingPage.jpg" alt="">
+              <p>Another landing page created, using HTML table elements.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/basicForm.jpg" alt="">
+              <p>Basic HTML form, using different elements (No server side code).</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/toDoList.jpg" alt="">
+              <p>To-do list application using JavaScript. Adding event handlers to web page elements.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/flickrSearch.jpg" alt="">
+              <p>Photo search application using Flickr API, displays images using AJAX.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/mobileDropDownMenu.jpg" alt="">
+              <p>Traditional menu navigation turns into a mobile drop down menu when needed, using jQuery. </p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/flickrButton.jpg" alt="">
+              <p>Photo thumbnails application using Flickr API, 3 buttons with an specific search.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/randomNumberGuessingGame.jpg" alt="">
+              <p>Random number guessing game using Javascript.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/interactiveStory.jpg" alt="">
+              <p>Interactive story made with users input and Javascript.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/javascriptQuiz.jpg" alt="">
+              <p>A javascript quiz made with user interaction.</p>
             </a>
           </li>
         </ul>
@@ -61,7 +121,7 @@
       <footer>
         <a href="http://twitter.com/avramstern"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/avramstern"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2014 Avram Stern.</p>
+        <p>&copy; 2015 Avram Stern.</p>
       </footer>
     </div>
   </body>
