--- a/index.html
+++ b/index.html
@@ -27,91 +27,91 @@
       <section>
         <ul id="gallery">
           <li>
-            <a href="img/numbers-01.jpg">
+            <a href="stern9.github.io/spoilerRevealer">
               <img src="img/spoilerRevealer.jpg" alt="">
               <p>Reveal elements with users interaction of 2 buttons using jQuery.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-02.jpg">
+            <a href="stern9.github.io/BBC_avram">
               <img src="img/avramBBC.jpg" alt="">
               <p>CSS project, trying to recreate the BBC website.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-06.jpg">
+            <a href="stern9.github.io/lakeTahoe">
               <img src="img/lakeTahoe.jpg" alt="">
               <p>A plain landing page using several HTML/CSS elements.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-09.jpg">
+            <a href="stern9.github.io/simpleLightbox">
               <img src="img/simpleLightbox.jpg" alt="">
               <p>Lightbox overlay for an image gallery using jQuery.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/interactivePasswordForm">
               <img src="img/interactivePasswordForm.jpg" alt="">
               <p>Interactive password confirmation form. Keyboard events in jQuery to compare passwords in 2 fields (No server side code).</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/drawingApp">
               <img src="img/drawingApp.jpg" alt="">
               <p>A simple drawing application using mouse events with jQuery and the HTML5 canvas element.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/widgetLandingPage">
               <img src="img/widgetLandingPage.jpg" alt="">
               <p>Another landing page created, using HTML table elements.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/basicForm">
               <img src="img/basicForm.jpg" alt="">
               <p>Basic HTML form, using different elements (No server side code).</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/toDoList">
               <img src="img/toDoList.jpg" alt="">
               <p>To-do list application using JavaScript. Adding event handlers to web page elements.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/flickrSearch">
               <img src="img/flickrSearch.jpg" alt="">
               <p>Photo search application using Flickr API, displays images using AJAX.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/mobileDropDownMenu">
               <img src="img/mobileDropDownMenu.jpg" alt="">
               <p>Traditional menu navigation turns into a mobile drop down menu when needed, using jQuery. </p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/flickrButton">
               <img src="img/flickrButton.jpg" alt="">
               <p>Photo thumbnails application using Flickr API, 3 buttons with an specific search.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/randomNumberGuessingGame">
               <img src="img/randomNumberGuessingGame.jpg" alt="">
               <p>Random number guessing game using Javascript.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/interactiveStory">
               <img src="img/interactiveStory.jpg" alt="">
               <p>Interactive story made with users input and Javascript.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-12.jpg">
+            <a href="stern9.github.io/javascriptQuiz">
               <img src="img/javascriptQuiz.jpg" alt="">
               <p>A javascript quiz made with user interaction.</p>
             </a>
